--- a/contact.html
+++ b/contact.html
@@ -7,34 +7,50 @@
         <meta name="description" content="contact">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <!-- <link rel="stylesheet" href=""> -->
+        <link rel="stylesheet" href="./style_template.css">
     </head>
     <body>
         <nav>
             <p>Jacob Sehl</p>
-            <p><a href="./index.html">About Jacob</a></p>
+            <p><a class="button" href="./index.html">About Jacob</a></p>
         </nav>
-        <section>
-            <h1>Contact Jacob Sehl</h1>
-            <p>Athens, GA &bullet; 912.604.4570 &bullet; jacobsehl@gmail.com</p>
-        </section> 
-        <hr>
-        <form action="https://formsubmit.co/1cd6ce813a6c2cc19f25db3d3330dc4a" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" name="email" required>
-            <label for="message">Message:</label>
-            <textarea name="message"></textarea>
-            <!-- change port # if necessary -->
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
-            <button type="submit">Submit</button>
-        </form>
+        <div class="contact-body">
+            <div class="one-col">
+                <section>
+                    <h1>Contact Jacob Sehl</h1>
+                    <p class="contact-p">
+                        Athens, GA 
+                        &bullet; 
+                        <a href="tel:+19126044570">912.604.4570</a> 
+                        &bullet; 
+                        <a href="mailto:jacobsehl@gmail.com">jacobsehl@gmail.com</a>
+                    </p>            </section> 
+                <hr>
+                <form action="https://formsubmit.co/1cd6ce813a6c2cc19f25db3d3330dc4a" method="POST">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" required>
+                    <label for="message">Message:</label>
+                    <textarea name="message"></textarea>
+                    <!-- change port # if necessary -->
+                    <input type="hidden" name="_next" value="https://jacobsehl.github.io/thankyou.html">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>       
+        </div>
+        
+
         <footer>
-            &copy; <a href="./index.html">Jacob Sehl</a> &bullet;
-            <a href="https://www.linkedin.com/in/jacobsehl">
-                <i class="fab fa-linkedin"></i>
-            </a>
+            <p>
+                &copy;<a id="footer-name" href="./index.html">Jacob Sehl</a> &bullet;
+            </p>
+            <p>
+                <a id="footer-icon" target="_blank" href="https://www.linkedin.com/in/jacobsehl">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </p>
+            
         </footer>
         <!-- <script src="" async defer></script> -->
     </body>
