--- a/thankyou.html
+++ b/thankyou.html
@@ -7,22 +7,28 @@
         <meta name="description" content="thankyou">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <!-- <link rel="stylesheet" href=""> -->
+        <link rel="stylesheet" href="./style_template.css">
     </head>
     <body>
         <nav>
-            <p><a href="./index.html">About Jacob</a></p>
-            <p><a href="./contact.html">Contact Jacob</a></p>
+            <p><a class="button" href="./index.html">About Jacob</a></p>
+            <p><a class="button" href="./contact.html">Contact Jacob</a></p>
         </nav>
-        <hr>
-        <section>
-            <h1>Thank You!</h1>
+        <!-- <hr> -->
+        <section id="thankyou">
+            <h1>Thank You For Contacting Me!</h1>
+            <img src = "./images/thx.svg" alt="My Happy SVG"/>
         </section> 
         <footer>
-            &copy; <a href="./index.html">Jacob Sehl</a> &bullet;
-            <a href="https://www.linkedin.com/in/jacobsehl">
-                <i class="fab fa-linkedin"></i>
-            </a>
+            <p>
+                &copy;<a id="footer-name" href="./contact.html">Jacob Sehl</a> &bullet;
+            </p>
+            <p>
+                <a id="footer-icon" target="_blank" href="https://www.linkedin.com/in/jacobsehl">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </p>
+            
         </footer>
         <!-- <script src="" async defer></script> -->
     </body>
