--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <ul>
                         <li><strong>Programming Languages:</strong> HTML, CSS, JavaScript, TypeScript, PHP, Python, Java, C, C#</li>
                         <li><strong>Frameworks & Technologies:</strong> Angular, .NET, JSON, REST APIs, FTP, SSL, SEO</li>
-                        <li><strong>Software / Tools:</strong> Excel, PowerPoint, Figma, Adobe Creative Suite, WordPress, Git</li>
+                        <li><strong>Software & Tools:</strong> Excel, PowerPoint, Figma, Adobe Creative Suite, WordPress, Git</li>
                     </ul>
                 </section>
                 <section id="experience">
