--- a/thankyou.html
+++ b/thankyou.html
@@ -21,7 +21,7 @@
         </section> 
         <footer>
             <p>
-                &copy;<a id="footer-name" href="./contact.html">Jacob Sehl</a> &bullet;
+                &copy;<a id="footer-name" href="./index.html">Jacob Sehl</a> &bullet;
             </p>
             <p>
                 <a id="footer-icon" target="_blank" href="https://www.linkedin.com/in/jacobsehl">
