--- a/thankyou.html
+++ b/thankyou.html
@@ -8,16 +8,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="./style_template.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav>
             <p><a class="button" href="./index.html">About Jacob</a></p>
             <p><a class="button" href="./contact.html">Contact Jacob</a></p>
         </nav>
-        <!-- <hr> -->
         <section id="thankyou">
             <h1>Thank You For Contacting Me!</h1>
-            <img src = "./images/thx.svg" alt="My Happy SVG"/>
+            <img src = "./images/thx.svg" alt="Thank You Image"/>
         </section> 
         <footer>
             <p>
@@ -28,8 +30,6 @@
                     <i class="fab fa-linkedin"></i>
                 </a>
             </p>
-            
         </footer>
-        <!-- <script src="" async defer></script> -->
     </body>
 </html>
